--- a/templates/pages/docs.html
+++ b/templates/pages/docs.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h2>Документация</h2>
-  <p>Здесь собраны обзоры, релизы и ответы на вопросы по smart-menu.</p>
+  <p>Здесь собраны обзоры, релизы и ответы на вопросы по Smart_Menu_Test.</p>
   <p>Выберите подраздел в меню слева, чтобы увидеть детальные страницы API, FAQ и релиз-ноты.</p>
 {% endblock %}
 
